2022-10-30  G. Branden Robinson <g.branden.robinson@gmail.com>

	* src/preproc/preconv/preconv.cpp: Trivially refactor.  Rename
	`default_encoding` to `fallback_encoding` for clarity.  Update
	comments and debugging diagnostic messages accordingly.

2022-10-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[grolj4]: Absorb lj4_font(5) man page into grolj4(1).

	* src/devices/grolj4/lj4_font.5.man: Delete, moving content...
	* src/devices/grolj4/grolj4.1.man (Fonts): ...hither.

	* doc/doc.am (GROFF_MAN_PAGES1):
	* src/devices/grolj4/grolj4.am (man5_MANS, EXTRA_DIST): Stop
	formatting and shipping removed page.

	* src/roff/groff/groff.1.man:
	* src/utils/hpftodit/hpftodit.1.man: Drop references to page.

	Fixes <https://savannah.gnu.org/bugs/index.php?61819>.

2022-10-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Support `SN` register to configure subsection heading
	indentation.

	* tmac/doc.tmac: Recognize `SN` register if set on command line
	and use groff man(7)-compatible default if it is not.
	* tmac/mdoc/doc-common (Ss): Use this register instead of a
	literal.
	* tmac/groff_mdoc.7.man (Formatting with groff, troff, and
	nroff): Document it.
	* NEWS: Update item.

	Fixes part of <https://savannah.gnu.org/bugs/?62926>.

2022-10-29  G. Branden Robinson <g.branden.robinson@gmail.com>

	[mdoc]: Support `IN` register to configure paragraph
	indentation.

	* tmac/doc.tmac: Recognize `IN` register if set on command line
	and use groff man(7)-compatible defaults if it is not.
	* tmac/mdoc/doc-common (Sh): Use this register instead of
	`doc-paragraph-indentation`.
	* tmac/mdoc/doc-ditroff:
	* tmac/mdoc/doc-nroff: Stop setting pargraph indentation
	defaults here.
	* tmac/groff_mdoc.7.man (Formatting with groff, troff, and
	nroff): Document it.
	* NEWS: Update item.

	* tmac/tests/doc_Mt-works.sh:
	* tmac/tests/doc_indents-correctly.sh: Update test expectations.

	Fixes part of <https://savannah.gnu.org/bugs/?62926>.
